// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Flex /> components composition should render a child by applying flex and space properties 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge Spaceweb__Space-njatzl-0 jBqZrs"
  >
    <span
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp"
    >
      Flex Item #1
    </span>
    <span
      class="Viewweb__View-sc-1cphyjf-0 lhSUkp"
    >
      Flex Item #2
    </span>
  </div>
</div>
`;

exports[`<Flex /> flex should render a an inline styled child with flex property 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Spaceweb__Space-njatzl-0 jBqZrs Flexweb__Flex-ni2cjg-0 libPPx"
    style="background-color: red; height: 100px;"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 eKxMBE"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #1
    </div>
    <div
      class="Textweb__Text-sc-6jf9e4-0 eKxMBE"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #2
    </div>
  </div>
</div>
`;

exports[`<Flex /> flexDirection should render a child with flexDirection row 1`] = `
<div>
  <div
    class="Viewweb__View-sc-1cphyjf-0 lhSUkp Flexweb__Flex-ni2cjg-0 dzXWge"
  >
    <div
      class="Textweb__Text-sc-6jf9e4-0 eKxMBE Spaceweb__Space-njatzl-0 jBqZrs"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #1
    </div>
    <div
      class="Textweb__Text-sc-6jf9e4-0 eKxMBE Spaceweb__Space-njatzl-0 jBqZrs"
      color="shade.980"
      data-testid="ds-text"
    >
      Flex Item #2
    </div>
  </div>
</div>
`;
